(Format: Year/Month/Day)
Changes for 0.9.10:
*04/05/17:
  * Fix rendering of transparency on menu exposes (Simon)
    - also enable save unders for menu windows
      This is kind of experimental. Backing store is off by default
      in XF86-4. If you want to play, add: Option "BackingStore"  "yes"
      to the Screen section in your XF86Config file. And let me know
      how it goes :) It basically means we don't have to refresh
      menus as much, but uses more memory. Shouldn't break anything new.
      Menu.cc FbWindow.hh/cc
  * Fix slit transparency too (finally) while we're at it (Simon)
    Slit.hh/cc
*04/05/13:
  * Fix a crash when a window closes while [opaque] moving (Simon)
    - also tidy up several related things when a window hides
    - don't call frame().hide() explicitly, use FBW.hide(bool)
    Window.hh/cc Workspace.hh/cc Screen.cc
*04/05/04:
  * Fix EventManager bug/memory leak (possibly caused crash) (Simon)
    EventManager.hh/cc
*04/05/02:
  * Added new nls item for windowmenu: Layer
    nls/C/Windowmenu.m    
  * New command: exit
    (Henrik)
    FbCommandFactory.cc
  * Fixed loading of a windowmenu file. (Henrik)
    New resource:
     * session.screen<num>.windowMenu: <filename>
    The menu file format is the same as the normal ~/.fluxbox/menu
    but with some special menu items:
    [iconify], [maximize], [shade], [close], [extramenus]
    [layer], [sendto]
    + the all the other menu items that you can use in the normal
      root menu (i.e [exec] (aterm) {aterm})
    The [extramenus] will add  "remember" menu
    example: session.screen0.windowMenu: ~/.fluxbox/windowmenu
        [begin]
        [exec] (aterm) {aterm}
        [maximize]
        [shade]
        [stick]
        [submenu] (advanced)
           [layer]
           [sendto]
           [extramenus]
        [end]
        [separator]
        [close]
        [end]
  * Moved out some simple classes from Screen.cc (Henrik)
    new files:
    StyleMenuItem.hh/cc